--- a/app/src/main/res/layout/activity_section_b2.xml
+++ b/app/src/main/res/layout/activity_section_b2.xml
@@ -119,7 +119,7 @@ tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="1dp"
-                android:text="@string/other" />
+                android:text="@string/others" />
         </RadioGroup>
         <EditText
             android:id="@+id/kb20796x"
